Beginning of server, templates, spoonacular API requests

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
     <title>K(i)ndTable</title>
 
     <!-- Bootstrap -->
-    <link href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.4/cyborg/bootstrap.min.css"
+    <link href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.4/yeti/bootstrap.min.css"
           rel="stylesheet">
 <link rel='stylesheet' type='text/css'>
 
