Many working routes. Forgetting to commit when things work. :(

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,11 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
 	<div id="homepage-block">
-    	<h1 id="homepage-title">K(i)ndTable</h1>
+    	<p>This is my homepage.
 	</div>
-
-
-<div>
-<a href = "/register"> Register</a>
-</div>
 {% endblock %}
