--- a/templates/login_form.html
+++ b/templates/login_form.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-<div class="well spaced" style="width:40%;">
+<div class="well spaced">
 <div>
     <h1>Login</h1>
     <form action="/login" method="POST">
@@ -18,7 +18,7 @@
         </div>
 
         <div class="form-group">
-            <input type="submit" value="Log In If You Dare" class="btn btn-danger">
+            <input type="submit" value="Log In" class="btn">
         </div>
 
     </form>
