--- a/templates/register_food_preferences.html
+++ b/templates/register_food_preferences.html
@@ -3,25 +3,21 @@
 <div class="well spaced" style="width:40%;">
 <h1>Register Food Preferences</h1>
 
-<form action="register" method="POST">
+
+<form action="/registerfood/<int:newuser_id>" method="POST">
 
     <div class="form-group">
         <label>
             <h4><strong>Intolerances or allergies (select all that apply) :</strong></h4>
-            {% for intolerance in intolerances %}
-              <input type="checkbox" name="intolerances" value="intolerance.intol_id">{{ intolerance.intol_name }}<br>
-            {% endfor %}
+                {% for intolerance in intol_list %}
+                  <input type="checkbox" name="intolerances." value={{ intolerance.intol_id }}>{{ intolerance.intol_name }}<br>
+                {% endfor %}
+            
+            <h4><strong>Ingredients you prefer to avoid :</strong></h4>
+                    Ingredient: <input type="text" name="ingredient" class="form-control"> Reason: <input type="text" name="reason" class="form-control"> 
+            <input type="submit" value="Add another ingredient" id="addanotheringredient">
         </label>
     </div>
-
-    <div class="form-group">
-        <label>
-            <h4><strong>Ingredients I prefer to avoid :</strong></h4>
-                Ingredient: <input type="text" name="ingredient" class="form-control"> Reason: <input type="text" name="reason" class="form-control">
-        </label>
-    </div>
-
-
 
     <div class="form-group">
         <input type="submit" value="Register" class="btn">
