--- a/templates/base.html
+++ b/templates/base.html
@@ -5,20 +5,64 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>K(i)ndTable</title>
-
     <!-- Bootstrap -->
     <link href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.4/yeti/bootstrap.min.css"
           rel="stylesheet">
+
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">K(i)nd Table</a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+   
+    <!-- Collect the nav links, forms, and other content for toggling -->
+      <ul class="nav navbar-nav">
+        <li><a href="/register">Register</a></li>
+        <li><a href="/login">Login</a></li>
+        <li class="dropdown">    
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Menu<span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="/userprofile">My profile</a></li>
+            <li><a href="#">Find friends</a></li>
+            <li><a href="#">Add a friend</a></li>
+            <li><a href="#">Plan a dinner party</a></li>
+            <li><a href="#">Your friends</a></li>
+            <li><a href="#">Your parties</a><li>
+          </ul>
+        </li>
+      </ul> 
+
+
+      <ul class="nav navbar-nav navbar-right">
+        <p class="navbar-text">
+            {% for flash in get_flashed_messages() %}
+                    {{ flash }}
+    {% endfor %}</p>    
+        <li><a href="/logout">Log out</a></li>
+        </li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+
+
 <link rel='stylesheet' type='text/css'>
 
 </head>
 <body>
 
 <div id="extending">
-    {% for flash in get_flashed_messages() %}
-      <div class="alert alert-danger" style="width:90%; margin:0 auto;">{{ flash }}</div>
-    {% endfor %}
+
 {% block content %}
 {% endblock %}
 </div>
