Working 'create a friend's profile' and updated user profile page

--- a/templates/add_a_friend.html
+++ b/templates/add_a_friend.html
@@ -16,7 +16,7 @@
     </div>
     </div>
 
-<a href="#">Created a new friend</a>
+<a href="#">Create a profile for your friend</a>
 
 <a href="/userprofile">Thanks, I'm done adding friends</a>
 
