Working add a friend and friends profile page

--- a/templates/find_a_friend.html
+++ b/templates/find_a_friend.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div class="well spaced">
 
-<form action="/findafriend" method="POST">
+<form action="/addafriend" method="POST">
     <div class="form-group">
         <label>
             <h4><strong>Search for a friend to add:</strong></h4>
@@ -15,8 +15,6 @@
         <input type="submit" value="Add Friend" class="btn">
     </div>
     </div>
-
-<a href="#">Create a profile for your friend</a>
 
 <a href="/userprofile">Thanks, I'm done adding friends</a>
 
