--- a/templates/base.html
+++ b/templates/base.html
@@ -29,16 +29,8 @@
       <ul class="nav navbar-nav">
         <li><a href="/register">Register</a></li>
         <li><a href="/login">Login</a></li>
-        <li class="dropdown">    
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Menu<span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="/userprofile">My profile</a></li>
-            <li><a href="#">Find friends</a></li>
-            <li><a href="#">Add a friend</a></li>
-            <li><a href="#">Plan a dinner party</a></li>
-            <li><a href="#">Your friends</a></li>
-            <li><a href="#">Your parties</a><li>
-          </ul>
+        <li><a href="/userprofile">My profile</a></li
+      </ul>
         </li>
       </ul> 
 
