all MVP working except recipe search page

--- a/templates/add_ingredient_to_avoid.html
+++ b/templates/add_ingredient_to_avoid.html
@@ -2,6 +2,12 @@
 {% block content %}
 <div class="well spaced">
 
+
+    <p>Already avoiding:</p>
+    {% for avoid in avoids %}
+    {{ avoid.ingredient}}<br>
+    {% endfor %}<br><br>
+
 <form action="/ingredientadded" method="POST">
     <div class="form-group">
         <label>
