--- a/templates/add_food_intolerance.html
+++ b/templates/add_food_intolerance.html
@@ -2,6 +2,10 @@
 {% block content %}
 <div class="well spaced">
 
+    <p>Intolerances already added:</p>
+    {% for intolerance in this_user.intolerances %}    
+    {{ intolerance.intol_name }}<br>
+    {% endfor %}
 
 <form action="/intolerance_added" method="POST">
 
