--- a/templates/base.html
+++ b/templates/base.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap -->
-    <link href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.4/yeti/bootstrap.min.css"
-          rel="stylesheet">
+    <link href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.4/yeti/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/site.css" rel="stylesheet">
+
 
 <nav class="navbar navbar-default">
   <div class="container-fluid">
@@ -19,7 +20,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">K(i)nd Table</a>
+      <a class="navbar-brand" href="/">K(i)nd Table</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -48,8 +49,6 @@
 </nav>
 
 
-<link rel='stylesheet' type='text/css'>
-
 </head>
 <body>
 
@@ -60,7 +59,6 @@
 </div>
 
 <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 
 </body>
 </html>
