--- a/templates/create_friends_profile_form.html
+++ b/templates/create_friends_profile_form.html
@@ -7,7 +7,7 @@
 
     <div class="form-group">
         <label>
-            <strong>Email address</strong> (required): <input type="text" name="email" class="form-control" required>
+            <strong>Email address</strong> (required): <input type="text" name="email" value={{ email_address }} class="form-control" required>
     
             Friend's first name (optional):
             <input type="text" name="first_name" class="form-control">
