--- a/templates/find_a_friend.html
+++ b/templates/find_a_friend.html
@@ -2,15 +2,10 @@
 {% block content %}
 <div class="well spaced">
 
-    <p>You are already friends with:</p>
-        {% for person in this_user.friends %}    
-                {{ person.friends.first_name }} {{ person.friends.last_name}} ({{ person.friends.email }}<br>
-                {% endfor %}
-
 <form action="/addafriend" method="POST">
     <div class="form-group">
         <label>
-            <h4><strong>Search for a friend to add:</strong></h4>
+            <h4><strong>Friend to add:</strong></h4>
             <input type="text" name="email_address" class="form-control">
         </label>
     </div>
@@ -24,5 +19,10 @@
 <a href="/userprofile">Thanks, I'm done adding friends</a>
 
 </form>
+    <p>Your friends:</p>
+        {% for person in this_user.friends %}    
+                {{ person.friends.first_name }} {{ person.friends.last_name}} ({{ person.friends.email }}<br>
+                {% endfor %}
+
 </div>
 {% endblock %}
