--- a/templates/friends_profile_page.html
+++ b/templates/friends_profile_page.html
@@ -2,26 +2,37 @@
 {% extends 'base.html' %}
 {% block content %}
 <div class="well spaced">
-<h1>Friend Profile: {{ this_user.first_name }} {{ this_user.last_name }} </h1>
+<h1>Friend Profile: {{ newfriend.first_name }} {{ newfriend.last_name }} </h1>
 
 <ul>
-    <li>Email address: {{ this_user.email }}</li>
-    <li>Diet: {{ this_users_diet.diet_type }}</li>
-    <li>Diet Reason: {{ this_user.diet_reason }}</li>
+    <li>Email address: {{ newfriend.email }}</li>
+    <li>Diet: {{ newfriend_diet.diet_type }}</li>
+    <li>Diet Reason: {{ newfriend.diet_reason }}</li>
     <li>Intolerances:</li>
         <ul>
-            {% for intolerance in this_user.intolerances %}    
+            {% for intolerance in newfriend.intolerances %}    
             <li>{{ intolerance.intol_name }}</li>
                 {% endfor %}
-            <li><a href="#" title="This feature coming soon">Change intolerances</a></li>
-        </ul>
+
+<li><form action="/addfriendintoleranceform" method="POST">
+    <input type="hidden" name="user_id" value={{ newfriend.user_id  }}>
+    <button>Add an intolerance for this friend</button>
+    </form>
+</li></ul>
+
     <li>Ingredients to avoid:</li>
         <ul>
-            {% for avoid in this_users_avoids %}
+            {% for avoid in newfriend_avoids %}
             <li>{{ avoid.ingredient }}</li>
             <li style="list-style-type:none">Reason: {{ avoid.reason}}</li>
             {% endfor %}
-            <li><a href="#" title="This feature coming soon">Change ingredients to avoid</a></li>
+            <li><form action="/addingfriendsinredienttoavoid" method="POST">
+            <input type="hidden" name="user_id" value={{ newfriend.user_id  }}>
+            <button>Add an ingredient to avoid for this friend</button>
+            </form>
         </ul>  
+
+<a href="/userprofile">Back to my profile page</a><br>
+
 </div>
 {% endblock %}
