--- a/templates/add_friends_ingredient_to_avoid.html
+++ b/templates/add_friends_ingredient_to_avoid.html
@@ -4,7 +4,7 @@
 
 
     <p>Ingredients to avoid for {{ newfriend.first_name }} {{newfriend.last_name }}:</p>
-    {% for avoid in avoids %}
+    {% for avoid in newfriend.avoidances %}
     {{ avoid.ingredient}}<br>
     {% endfor %}<br><br>
 
