--- a/templates/add_a_guest.html
+++ b/templates/add_a_guest.html
@@ -13,12 +13,10 @@
                 {% endfor %}<br><br>
 
                 <p>Add guests:</p>
-                <select name="guest">
-                <option disabled selected value> -- select an option -- </option>
                 {% for person in this_user.friends %}
-                <option value={{ person.friends.user_id }}>  {{ person.friends.first_name }} {{ person.friends.last_name}} ({{ person.friends.email }})</option>
+                <input type="checkbox" name="guests" value={{ person.friends.user_id }}> {{ person.friends.first_name}} {{ person.friends.last_name }} ({{ person.friends.email }})
                 {% endfor %}
-            </select><br>           
+            <br>           
         </label>
     </div>
 
