--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
       <ul class="nav navbar-nav">
         <li><a href="/register">Register</a></li>
         <li><a href="/login">Login</a></li>
-        <li><a href="/userprofile">My profile</a></li
+        <li><a href="/userprofile">My profile</a></li>
       </ul>
         </li>
       </ul> 
