--- a/templates/add_ingredient_to_avoid.html
+++ b/templates/add_ingredient_to_avoid.html
@@ -4,29 +4,27 @@
 
 
     <p>Ingredients to avoid for {{ this_user.first_name }} :</p>
-    {% for avoid in this_user.avoidances %}
-    {{ avoid.ingredient}}<br>
-    {% endfor %}<br><br>
+        {% for avoid in this_user.avoidances %}
+        {{ avoid.ingredient}}<br>
+        {% endfor %}<br><br>
+                
+    <form action="/ingredientadded" method="POST">
+        <div class="form-group">
+            <label>
+                <strong>Add an ingredient you would like to avoid:</strong>
+                <input type="text" name="ingredient" class="form-control">
+                Add a reason you like to avoid this ingredient (optional):
+                <input type="text" name="reason" class="form-control">
+            </label>
+        </div>
 
-<form action="/ingredientadded" method="POST">
-    <div class="form-group">
-        <label>
-            <h4><strong>Add an ingredient you would like to avoid:</strong></h4>
-            <input type="text" name="ingredient" class="form-control">
+        <div class="form-group">
 
-            Add a reason you like to avoid this ingredient (optional):
-            <input type="text" name="reason" class="form-control">
-        </label>
-    </div>
+            <input type="submit" value="Add Ingredient" class="btn">
+        </div>
+    </form>
 
-    <div class="form-group">
+    <a href="/userprofile">Thanks, I'm done adding ingredients</a>
 
-        <input type="submit" value="Add Ingredient" class="btn">
-    </div>
-    </div>
-
-<a href="/userprofile">Thanks, I'm done adding ingredients</a>
-
-</form>
 </div>
 {% endblock %}
