Fixed bootstrap, added seperate base parents for login, added session storage for party

--- a/templates/add_friends_food_intolerance.html
+++ b/templates/add_friends_food_intolerance.html
@@ -20,3 +20,17 @@
 
         </label>
     </div>
+
+    <div class="form-group">
+
+        <input type="submit" value="Add Intolerance" class="btn">
+    </div>
+    </div>
+
+</form>
+
+<a href="/friendprofile?friends_id={{ newfriend.user_id }}">Thanks, I'm done adding intolerances/allergies</a>
+
+
+</div>
+{% endblock %}
