--- a/templates/friends_profile_page.html
+++ b/templates/friends_profile_page.html
@@ -32,7 +32,10 @@
             </form>
         </ul>  
 
-<a href="/userprofile">Back to my profile page</a><br>
 
 </div>
+<div>
+    <p><a href="/userprofile">Back to my profile page</a></p><br>
+</div>
+
 {% endblock %}
