--- a/templates/add_food_intolerance.html
+++ b/templates/add_food_intolerance.html
@@ -20,3 +20,15 @@
 
         </label>
     </div>
+
+    <div class="form-group">
+
+        <input type="submit" value="Add Intolerance" class="btn">
+    </div>
+    </div>
+
+<a href="/userprofile">Thanks, I'm done adding intolerances/allergies</a>
+
+</form>
+</div>
+{% endblock %}
