--- a/templates/base.html
+++ b/templates/base.html
@@ -1,64 +1,58 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- Bootstrap -->
-    <link href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.4/yeti/bootstrap.min.css" rel="stylesheet">
-    <link href="/static/site.css" rel="stylesheet">
+    <title>Kind Table</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/static/site.css">
+</head>
 
 
 <nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="/">K(i)nd Table</a>
-    </div>
+    <div class="container-fluid">
+           <!--     Brand and toggle get grouped for better mobile display--> 
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="/">K(i)nd Table</a>
+        </div>
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
+
+     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-   
-    <!-- Collect the nav links, forms, and other content for toggling -->
-      <ul class="nav navbar-nav">
-        <li><a href="/register">Register</a></li>
-        <li><a href="/login">Login</a></li>
-        <li><a href="/userprofile">My profile</a></li>
-      </ul>
-        </li>
-      </ul> 
-
-
-      <ul class="nav navbar-nav navbar-right">
-        <p class="navbar-text">
-            {% for flash in get_flashed_messages() %}
-                    {{ flash }}
-    {% endfor %}</p>    
-        <li><a href="/logout">Log out</a></li>
-        </li>
-      </ul>
+        <ul class="nav navbar-nav">
+            <li><a href="/userprofile">My profile</a></li>
+                <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">My Parties<span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                      {% for party in this_user.parties %}
+                        <li><a href="/party_profile/{{ party.party_id }}">{{  party.title  }}</a></li>
+                      {% endfor %}
+                    </ul>
+                </li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+            <li><a href="/logout">Log out</a></li>
+        </ul>
     </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
+    </div><!-- /.container-fluid -->
 </nav>
 
+<div class="container-fluid">
 
-</head>
-<body>
 
-<div id="extending">
+    <div id="extending">
 
-{% block content %}
-{% endblock %}
+    {% block content %}
+    {% endblock %}
+    </div>
+
+    <script src="http://code.jquery.com/jquery.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 </div>
-
-<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-
 </body>
 </html>
