--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,6 +1,53 @@
-{% extends 'base.html' %}
+<!DOCTYPE html>
+<html>
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Kind Table</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/static/site.css">
+</head>
+
+
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+           <!--     Brand and toggle get grouped for better mobile display--> 
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="/">K(i)nd Table</a>
+        </div>
+
+
+     <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+            <li><a href="/register">Register</a></li>
+            <li><a href="/login">Log in</a></li>
+
+        </ul>
+    </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+</nav>
+
+<div class="container-fluid">
+
+<div id="extending">
+
 {% block content %}
-	<div id="homepage-block">
-    	<p>This is my homepage.
-	</div>
 {% endblock %}
+</div>
+
+  <p>Welcome to Kind Table</p>
+
+</div><!-- /.container-fluid -->
+
+
+<script src="http://code.jquery.com/jquery.js"></script>
+<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+
+</body>
+</html>
