--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -29,6 +29,11 @@
             <li><a href="/login">Log in</a></li>
 
         </ul>
+                        <ul class="nav navbar-nav navbar-right">
+                          {% for flash in get_flashed_messages() %}
+            <li><h4><span class="label label-danger">{{  flash  }}</h4></span></li>
+            {% endfor %}
+          </ul>
     </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
 </nav>
