--- a/templates/view_recipe.html
+++ b/templates/view_recipe.html
@@ -4,24 +4,28 @@
 <div class="container">
 <h1>{{  title  }}</h1>
 
-
+<div>
     <form action="/addtorecipebox" method="POST">
-        <input type="hidden" name="party_id" value="{{ party_id  }}">
         <input type="hidden" name="recipe_id" value="{{ recipe_id }}">
         <input type="hidden" name="title" value="{{  title  }}">
         <input type="hidden" name="recipe_image_url" value="{{  recipe_image_url  }}">
         <input type="hidden" name="recipe_url" value="{{ recipe_url }}">
-        <button>Remember this recipe for later</button>
+        <button>Save this recipe</button>
     </form>
+</div>
 
-<form action="/searchrecipes" method="POST">
-    <input type="hidden" name="party_id" value="{{ party_id  }}">
-    <button>Back to recipe search page</button>
-</form>
+<br><br>
+<div>
+<a href="/searchrecipes">Back to recipe search page</a>
+</div>
 
+<div>
 <a href="/party_profile/{{ party_id  }}">Back to party profile</a>
+</div>
 
+<div>
 <iframe sandbox="allow-same-origin allow-scripts" src="{{ recipe_url}}" width=100% height=500></iframe>
+</div>
 
 </div>
 {% endblock %}
